@@ -323,6 +323,9 @@ importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(SummarizedExperiment,rowRanges)
+importFrom(TreeSummarizedExperiment,changeTree)
+importFrom(ape,as.phylo)
+importFrom(ape,bind.tree)
 importFrom(ape,collapse.singles)
 importFrom(ape,cophenetic.phylo)
 importFrom(ape,drop.tip)
@@ -335,6 +338,7 @@ importFrom(decontam,isContaminant)
 importFrom(decontam,isNotContaminant)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
+importFrom(dplyr,as_tibble)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,coalesce)
 importFrom(dplyr,desc)
