@@ -449,7 +449,7 @@ setMethod(
 
 # Agglomerate all rowTrees found in TreeSE object. Get tips that represent
 # rows and remove all others.
-.agglomerate_trees <- function(x, MARGIN = 1){
+.agglomerate_trees <- function(x, MARGIN = 1, ...){
     # Get right functions based on direction
     tree_names_FUN <- switch(
         MARGIN, "1" = rowTreeNames, "2" = colTreeNames, stop("."))
@@ -474,7 +474,7 @@ setMethod(
             # Get names of nodes that are preserved
             links_temp <- links_temp[["nodeLab"]]
             # Agglomerate the tree
-            tree <- .prune_tree(tree, links_temp)
+            tree <- .prune_tree(tree, links_temp, ...)
             # Change the tree with agglomerated version
             args <- list(x, tree, links_temp, name)
             names(args) <- args_names
@@ -487,9 +487,14 @@ setMethod(
 # This function trims tips until all tips can be found from provided set of
 # nodes
 #' @importFrom ape drop.tip has.singles collapse.singles
-.prune_tree <- function(tree, nodes){
+.prune_tree <- function(tree, nodes, collapse.singles = TRUE, ...){
+    # Check collapse.singles
+    if( !.is_a_bool(collapse.singles) ){
+        stop("'collapse.singles' must be TRUE or FALSE.", call. = FALSE)
+    }
+    #
     # Get those tips that can not be found from provided nodes
-    remove_tips <- tree$tip.label[!tree$tip.label %in% nodes]
+    remove_tips <- .get_tips_to_drop(tree, nodes)
     # As long as there are tips to be dropped, run the loop
     while( length(remove_tips) > 0 ){
         # Drop tips that cannot be found. Drop only one layer at the time. Some
@@ -514,12 +519,26 @@ setMethod(
         }
         # Again, get those tips of updated tree that cannot be found from
         # provided nodes
-        remove_tips <- tree$tip.label[!tree$tip.label %in% nodes]
+        remove_tips <- .get_tips_to_drop(tree, nodes)
     }
     # Simplify the tree structure. Remove nodes that have only single
     # descendant.
-    if( !is.null(tree) && length(tree$tip.label) > 1 && has.singles(tree) ){
+    if( !is.null(tree) && length(tree$tip.label) > 1 && has.singles(tree) &&
+            collapse.singles ){
         tree <- collapse.singles(tree)
     }
     return(tree)
+}
+
+# This function gets tree and nodes as input. As output, it gives set of tips
+# that are not in the set of nodes provided as input.
+.get_tips_to_drop <- function(tree, nodes){
+    # Get those tips cannot be found from node set
+    cannot_be_found <- !tree$tip.label %in% nodes
+    # Get those tips that are duplicated. Single node should match with only
+    # one row.
+    dupl <- duplicated(tree$tip.label)
+    # Get indices of those tips that are going to be removed
+    tips <- which( cannot_be_found | dupl )
+    return(tips)
 }
