@@ -224,7 +224,7 @@ setMethod("mergeSEs", signature = c(x = "SimpleList"),
             # Merge objects
             tse <- .merge_SEs(
                 x, class, join, assay.type, missing.values, collapse.cols,
-                collapse.rows, verbose)
+                collapse.rows, verbose, ...)
             return(tse)
         }
 )
@@ -273,7 +273,7 @@ setMethod("mergeSEs", signature = c(x = "list"),
 #' @importFrom SingleCellExperiment SingleCellExperiment
 .merge_SEs <- function(
         x, class, join, assay.type, missing.values, collapse.cols,
-        collapse.rows, verbose){
+        collapse.rows, verbose, ...){
 
     # Take first element and remove it from the list
     tse <- x[[1]]
@@ -352,11 +352,11 @@ setMethod("mergeSEs", signature = c(x = "list"),
     refSeqs <- tse_args$refSeqs
     # If data includes rowTrees, add them
     if( !is.null(rowTrees) ){
-        tse <- .check_and_add_trees(tse, rowTrees, "row", verbose)
+        tse <- .check_and_add_trees(tse, rowTrees, "row", verbose, ...)
     }
     # If data includes colTrees, add them
     if( !is.null(colTrees) ){
-        tse <- .check_and_add_trees(tse, colTrees, "col", verbose)
+        tse <- .check_and_add_trees(tse, colTrees, "col", verbose, ...)
     }
     # If data includes reference sequences, add them
     if( !is.null(refSeqs) ){
@@ -476,10 +476,12 @@ setMethod("mergeSEs", signature = c(x = "list"),
 
 # Input: tree data and TreeSE
 # Output: TreeSE
-.check_and_add_trees <- function(tse, trees_and_links, MARGIN, verbose){
+#' @importFrom TreeSummarizedExperiment changeTree
+.check_and_add_trees <- function(
+        tse, trees_and_links, MARGIN = "row", verbose = FALSE, ...){
     # Give a message if verbose is specified
     if( verbose ){
-        message("Adding ", MARGIN, "Tree(s)...")
+        message("Merging ", MARGIN, "Tree...")
     }
     # Get trees
     trees <- trees_and_links$trees
@@ -499,10 +501,12 @@ setMethod("mergeSEs", signature = c(x = "list"),
                 "is discarded.", call. = FALSE)
         return(tse)
     }
-    
     # If there are multiple trees, select non-duplicated trees; the largest
     # take the precedence, remove duplicated rowlinks --> each row is presented
     # in the set only once --> remove trees that do not have any values anymore.
+    # The aim is to subset the dataset so that it is easier to handle in tree
+    # binding step for instance. Otherwise, it would lead to huge tree that
+    # might exceed memory.
     if( length(trees) > 1 ){
         # Sort trees --> trees with highest number of taxa first
         max_trees <- table(links$whichTree)
@@ -517,28 +521,70 @@ setMethod("mergeSEs", signature = c(x = "list"),
         # Subset trees
         trees <- trees[unique(links$whichTree)]
     }
-    
-    # Order the data to match created TreeSE
+    # Combine trees into single tree.
+    tree <- .merge_trees(trees, links, ...)
+    # Order links so that the order matches with TreeSE
     links <- links[rownames(tse), ]
-    trees <- trees[unique(links$whichTree)]
-    
-    # Create a LinkDataFrame based on the link data
-    links <- LinkDataFrame(
-        nodeLab = links[["nodeLab"]],
-        nodeNum = links[["nodeNum"]],
-        nodeLab_alias = links[["nodeLab_alias"]],
-        isLeaf = links[["isLeaf"]],
-        whichTree = links[["whichTree"]]
-    )
     # Add the data in correct slot based on MARGIN
-    if(MARGIN == "row" ){
-        tse@rowTree <- trees
-        tse@rowLinks <- links
-    } else{
-        tse@colTree <- trees
-        tse@colLinks <- links
-    }
+    args <- list(tse, tree, links[["nodeLab"]])
+    arg_names <- switch(
+        MARGIN,
+        "row" = c("x", "rowTree", "rowNodeLab"),
+        "col" = c("x", "colTree", "colNodeLab"))
+    names(args) <- arg_names
+    tse <- do.call(changeTree, args)
     return(tse)
+}
+
+################################# .merge_trees #################################
+# This function merges list of trees into single tree.
+
+# Input: list of trees and link DataFrame
+# Output: single tree
+#' @importFrom ape bind.tree as.phylo
+#' @importFrom dplyr as_tibble
+.merge_trees <- function(trees, links, ...){
+    # Bind trees to combine one large tree
+    # Take first tree
+    tree <- trees[[1]]
+    trees[[1]] <- NULL
+    # Loop through trees and bind them
+    for( t in trees ){
+        # Bind from root node if available. If not, then bind from node 0.
+        tree <- bind.tree(tree, t)
+    }
+    # Prune the tree so that it includes rows in tips. This step removes
+    # additional tips, i.e., only tips that are in rows are preserved. Also
+    # it simplifies the structure preserving the necessary information on the
+    # dataset. Moreover, it ensures that there are no duplicated tips which
+    # might be the case if the merged trees had shared taxa in addition to
+    # unique taxa.
+    tree <- .prune_tree(tree, links[["nodeLab"]], ...)
+    # At this point, we have one large tree that includes all trees. The trees
+    # are bind without merging. This means that we can have duplicated nodes
+    # and branches. For instance, there can be a node "family x" which is
+    # present in two trees that were merged. This means that "family x" is now
+    # present 2 times in result tree. Moreover, descendant nodes of these
+    # "family x" nodes can differ, which means that we cannot just remove
+    # duplicated nodes. Instead, we have to relink nodes so that each node
+    # label is present only one time and all its child nodes are preserved.
+    if( any(duplicated( c(tree$tip.label, tree$node.label) )) ){
+        # Convert to table so that we can modify the data
+        old_tree <- tree <- as_tibble(tree)
+        # Remove duplicated nodes
+        tree <- tree[ !duplicated(tree[["label"]]), ]
+        # Reindex nodes
+        tree[["node"]] <- seq_len(nrow(tree))
+        # Reorder the old tree to match new trees parent node order
+        old_tree <- old_tree[ match(tree[["parent"]], old_tree[["node"]]), ]
+        # Reindex parent nodes of new tree
+        parent <- tree[ match(old_tree[["label"]], tree[["label"]]), ]
+        parent <- parent[["node"]]
+        tree[["parent"]] <- parent
+        # Convert back to phylo object
+        tree <- as.phylo(tree)
+    }
+    return(tree)
 }
 
 ############################### .get_TreeSE_args ###############################
